Rest api for fetching campaigns conversion
